force-app/main/objects/Course_Resources__c.object
<CustomObject>
    <description>To log details of associates and tutors used for course
		resourcing.</description>
    <fields>
        <fullName>CourseName__c</fullName>
        <formula>TEXT (Course_Name__r.Course_Name__c)</formula>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Resource Course Name</label>
        <referenceTo>Courses__c</referenceTo>
        <relationshipLabel>Course Resources</relationshipLabel>
        <relationshipName>R00N20000001IBf6EAG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Course_Resource_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Course Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N20000001IBkTEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Venue__c</fullName>
        <formula>TEXT( Course_Name__r.Course_Venue__c )</formula>
        <label>Course Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Attendance_Plan__c</fullName>
        <description>Details of which days or parts of days the resource will
			attend.</description>
        <label>Resource Attendance Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Name_SHL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource Name(SHL) would be name of SHL user</description>
        <inlineHelpText>Required as a user lookup for system training course types only.</inlineHelpText>
        <label>Resource Name(SHL)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N20000001IBY4EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Notes__c</fullName>
        <label>Resource Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Role__c</fullName>
        <label>Resource Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Course Director</fullName>
                </value>
                <value>
                    <fullName>Tutor 1</fullName>
                </value>
                <value>
                    <fullName>Tutor 2</fullName>
                </value>
                <value>
                    <fullName>Tutor 3</fullName>
                </value>
                <value>
                    <fullName>Tutor 4</fullName>
                </value>
                <value>
                    <fullName>Tutor 5</fullName>
                </value>
                <value>
                    <fullName>Tutor 6</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>SHL</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course Resource</label>
    <listViews>
        <fullName>AllResources</fullName>
        <columns>Resource_Name__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Resource_Type__c</columns>
        <columns>Resource_Role__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Resources</label>
    </listViews>
    <nameField>
        <displayFormat>R{00000}</displayFormat>
        <label>Course Resources Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Course_Director_Validation</fullName>
        <active>true</active>
        <description>It ensures that there can be only one Course Director for a course</description>
        <errorConditionFormula>AND 
( 
IF(ISNEW(),TRUE, ISCHANGED( Resource_Role__c )), 
ISPICKVAL(Resource_Role__c, &quot;Course Director&quot;), 
IF (OR ( ISBLANK(Course_Name__r.Course_Director__c) ,(Course_Name__r.Course_Director__c)=&quot;0032000000atnKF&quot;),false,true ) 
)</errorConditionFormula>
        <errorMessage>There already exists a Course Director for this course . You cannot add this resource as Course Director.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resource_NameSHL_cannot_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Resource_Role__c,&apos;Course Director&apos;),
ISPICKVAL(Resource_Type__c,&apos;SHL&apos;),
ISBLANK(Resource_Name_SHL__c),
ISPICKVAL(Course_Name__r.Course_Type__c,&apos;System Training&apos;)
)</errorConditionFormula>
        <errorDisplayField>Resource_Name_SHL__c</errorDisplayField>
        <errorMessage>Resource Name(SHL) cannot be blank if Resource Role is &apos;Course Director&apos; ,Resource Type is &apos;SHL&apos; and Course Type is &apos;System Training&apos;.</errorMessage>
    </validationRules>
</CustomObject>